# MGE_GOAT

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.github/workflows/: ci.yml
docs/: CAPABILITIES.md  LOCAL_LLAMA.md
src/: catalog.rs  checkpoint.rs  commands.rs  config.rs  embed.rs  gpu.rs  graph.rs  hooks.rs  main.rs  market.rs  mcp.rs  mentions.rs  permissions.rs  plugins.rs  rag.rs  repo_map.rs  routing.rs  session.rs  setup.rs  skills.rs  sprite.rs  telemetry.rs  theme.rs  util.rs
src/agent/: mod.rs  spawn.rs
src/llm/: mod.rs  openai_compat.rs
src/tools/: delegate.rs  lsp.rs  mod.rs  web_search.rs
src/tui/: mod.rs
