[package]
name = "mge_goat"
version = "0.1.0"
edition = "2024"
description = "MGE_GOAT — an open-source, GPU-aware agentic coding CLI 🐐🍦"
license = "MIT"

[[bin]]
name = "mge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
directories = "6.0.0"
eventsource-stream = "0.2.3"
futures-util = "0.3.32"
ratatui = "0.30.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
